<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="@drawable/route_icon"
    android:dividerPadding="@dimen/activity_horizontal_margin"
    android:gravity="fill_vertical|fill_horizontal"
    android:orientation="vertical"
    android:showDividers="middle" >

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/buttonItineraire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@string/ClickboutonItineraire"
            android:text="@string/ItemItineraire" />

        <Button
            android:id="@+id/buttonRechelieu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ItemRechLieux" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/TextePreference"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PreferencePays" />

        <autocompletion.MyAutoCompleteTextView
            android:id="@+id/autoCompletePointDepart"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:text="AutoCompleteTextView" >

            <requestFocus />
        </autocompletion.MyAutoCompleteTextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PreferenceRegion" />

        <autocompletion.MyAutoCompleteTextView
            android:id="@+id/autoCompletePreferenceRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="AutoCompleteTextView" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSe_Ville"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PreferenceVille" />

        <autocompletion.MyAutoCompleteTextView
            android:id="@+id/autoCompletePreferenceVille"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:text="AutoCompleteTextView" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonModifierPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ModifierPreference" />

    </LinearLayout>

</LinearLayout>