<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:contentDescription="@string/TitreFormulaireItineraire"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PointDepart" />

                <CheckBox
                    android:id="@+id/checkBoxFiltrerPreference_PtDepart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FiltrageDesLieux" />

                <RadioGroup
                    android:id="@+id/radioGroupDepart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioMaPosition" />

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/radioCarte" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioSaisirManuellement" />

                </RadioGroup>

                <autocompletion.MyAutoCompleteTextView
                    android:id="@+id/autoCompletePointDepart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10" >

                    <requestFocus android:layout_width="wrap_content" />

                </autocompletion.MyAutoCompleteTextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/PointArrive" />

                <CheckBox
                    android:id="@+id/CheckBoxFiltrerPreferenceArrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FiltrageDesLieux" />

                <RadioGroup
                    android:id="@+id/radioGroupArrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioCarte" />

                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/radioSaisirManuellement" />

                </RadioGroup>

                <autocompletion.MyAutoCompleteTextView
                    android:id="@+id/autoCompletePointArrivee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_iti_Prec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonPrecedent" />

        <Button
            android:id="@+id/button_iti_Suiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonSuivant" />
    </LinearLayout>

</LinearLayout>
