<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView12"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/LePays"
            android:width="@dimen/activity_horizontal_margin" />

        <Spinner
            android:id="@+id/spinner_F_Rech_L_Pays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewSe_Ville"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/LARegion"
            android:width="@dimen/activity_horizontal_margin" />

        <Spinner
            android:id="@+id/spinnerRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:text="@string/LaVille"
            android:width="@dimen/activity_horizontal_margin" />

        <Spinner
            android:id="@+id/spinnerVille"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="178dp"
                android:layout_height="match_parent"
                android:text="@string/TypeLieu"
                android:width="@dimen/activity_horizontal_margin" />

            <Spinner
                android:id="@+id/spinnerTypedeLieux"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_f_Lieu_Pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonPrecedent" 
            style="@android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_f_Lieu_Suiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boutonSuivant" 
            style="@android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
